# aarch64-intrinsics

./: Cargo.toml  README.md
src/: lib.rs  memcmp.s  memcpy.s  memset.s
