[package]
name = "aarch64-intrinsics"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0 WITH LLVM-exception"
description = "AArch64 optimized compiler intrinsics"
authors = [
  "Ard Biesheuvel <ardb@kernel.org>",
]
repository = "https://github.com/ardbiesheuvel/aarch64-intrinsics"
categories = ["embedded", "no-std"]
